Add form elements

--- a/index.html
+++ b/index.html
@@ -14,11 +14,20 @@
 </head>
 
 <body>
+    <h1>The Guilded Rose</h1>
 
-    <main>
-
-    </main>    
-
+    <h2>Add To Inventory</h2>
+    <div class="add-to-inventory">
+        <form>
+            <input type="text" name="item-name" id="new-item" placeholder="Item Name" required>
+            <input type="text" name="item-quality" id="item-quality" placeholder="Item Quality" pattern="0-9" required>
+            <input type="text" name="item-sell-in" id="item-sell-in" placeholder="Item Sell-In" pattern="0-9" required>
+            <input type="date" name="added-date" id="item-added-date" placeholder="mm/dd/yyyy" required>
+            <input type="submit">
+        </form>
+    </div>
+    <h2>Current Inventory</h2>
+    <div class="current-inventory"></div>
 </body>
 
 </html>
