Add button style

--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
             <input type="text" name="item-quality" id="item-quality" placeholder="Item Quality" pattern="0-9" required>
             <input type="text" name="item-sell-in" id="item-sell-in" placeholder="Item Sell-In" pattern="0-9" required>
             <input type="date" name="added-date" id="item-added-date" placeholder="mm/dd/yyyy" required>
-            <input type="submit">
+            <input type="submit" class="submit">
         </form>
     </div>
     <h2>Current Inventory</h2>
-    <div class="current-inventory"></div>
+    <div class="current-inventory">
+        <button>Display</button>
+    </div>
 </body>
 
 </html>
