--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div class="add-to-inventory">
         <form class="item-add">
             <input type="text" name="name" id="new-item" placeholder="Item Name" required>
-            <input type="number" name="SellIn" id="item-sell-in" placeholder="Item Sell-In" required>
-            <input type="number" name="Quality" id="item-quality" placeholder="Item Quality" required>
-            <input type="text" name="Date" id="item-added-date" placeholder="mm/dd/yyyy" required>
+            <input type="number" name="sellIn" id="item-sell-in" placeholder="Item Sell-In" required>
+            <input type="number" name="quality" id="item-quality" placeholder="Item Quality" required>
+            <input type="text" name="date" id="item-added-date" placeholder="mm/dd/yyyy" required>
             <input type="reset" class="reset">
             <input type="submit" class="submit">
         </form>
